--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
     "name": "AutoGen",
-    "build": {
-        "dockerfile": "../Dockerfile"
-    },
+    "image": "python:3.10.11-bullseye",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -10,5 +8,6 @@
                 "GitHub.copilot"
             ]
         }
-    }
+    },
+    "onCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt"
 }
